--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   laravel:
-    image: serversideup/php:8.2-fpm-nginx
+    image: ramageek/php:8.1-javan
     volumes:
       - .:/var/www/html/
     ports:
